@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-31T02:15:52Z",
+  "timestamp" : "2022-05-31T08:32:11Z",
   "count_outdated" : 491,
   "uniques_outdated" : 275,
-  "count" : 521,
-  "uniques" : 292,
+  "count" : 532,
+  "uniques" : 301,
   "clones" : [
     {
       "timestamp": "2022-05-17T00:00:00Z",
@@ -53,6 +53,13 @@
       "count_minmax": [ 1, 15 ],
       "uniques": 7,
       "uniques_minmax": [ 1, 7 ]
+    },
+    {
+      "timestamp": "2022-05-31T00:00:00Z",
+      "count": 11,
+      "count_minmax": [ 11, 11 ],
+      "uniques": 9,
+      "uniques_minmax": [ 9, 9 ]
     }
   ]
 }
