@@ -1,6 +1,6 @@
 {
-  "count": 30,
-  "uniques": 10,
+  "count": 41,
+  "uniques": 14,
   "clones": [
     {
       "timestamp": "2022-05-17T00:00:00Z",
@@ -36,6 +36,11 @@
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 15,
       "uniques": 7
+    },
+    {
+      "timestamp": "2022-05-31T00:00:00Z",
+      "count": 11,
+      "uniques": 9
     }
   ]
 }
